Fixed english aligned to the right side

--- a/src/views/components/comment-list/comment-list.scss
+++ b/src/views/components/comment-list/comment-list.scss
@@ -2,7 +2,7 @@
 
 
 .comment-list {
-  padding: 0.5em 1em 1em 1em;
+  padding: 0.5em 0.5em 1em 0.5em;
   background: #f6f8f9;
 }
 
